@startuml Diagrama_Patrones_Diseño
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #F0F0F0
skinparam classBorderColor #333333

' STRATEGY PATTERN
package "1. Strategy Pattern" #FFE6E6 {
    abstract class PaymentStrategy {
        {abstract} +process_payment()
    }
    class CreditCardPaymentStrategy
    class PayPalPaymentStrategy

    PaymentStrategy <|-- CreditCardPaymentStrategy
    PaymentStrategy <|-- PayPalPaymentStrategy
}

' FACTORY PATTERN
package "2. Factory Pattern" #FFF0E6 {
    class StrategyFactory {
        {static} +get_strategy(method)
    }
}

' REPOSITORY PATTERN
package "3. Repository Pattern" #E6FFE6 {
    abstract class PaymentRepository {
        {abstract} +get_all()
        {abstract} +save()
    }
    class FilePaymentRepository
    PaymentRepository <|-- FilePaymentRepository
}

' DEPENDENCY INJECTION
package "4. Dependency Injection" #E6F3FF {
    class PaymentRoutes
    class PaymentsService
    PaymentRoutes --> PaymentsService
}

' SERVICE LAYER
package "5. Service Layer" #FFE6F0 {
    class ServicePayment {
        +register_payment()
        +pay_payment()
        +revert_payment()
    }
}

' DTO PATTERN
package "6. DTO Pattern" #FFFACD {
    class PaymentRequest {
        +id: str
        +amount: float
        +method: str
    }
}

' LAYERED ARCHITECTURE
package "7. Layered Architecture" #E0E0FF {
    class APILayer
    class AppLayer
    class DomainLayer
    class InfraLayer

    APILayer -down-> AppLayer
    AppLayer -down-> DomainLayer
    DomainLayer -down-> InfraLayer
}

note right of PaymentStrategy
  Strategy Pattern:
  Define algoritmos intercambiables
end note

note right of StrategyFactory
  Factory Pattern:
  Crear instancias sin especificar clase
end note

note right of PaymentRepository
  Repository Pattern:
  Abstrae persistencia de datos
end note

note right of PaymentRoutes
  Dependency Injection:
  Inyectar dependencias en clases
end note

note right of ServicePayment
  Service Layer:
  Encapsula lógica de negocio
end note

note right of PaymentRequest
  DTO Pattern:
  Transferencia entre capas
end note

note right of APILayer
  Layered Architecture:
  Separación en capas independientes
end note

@enduml
